- Adds restart restart / resume call for a failed node - Adds event emission
